--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -8,16 +8,60 @@
     color: $common-text-color;
     height: 40px;
     position: relative;
-    .btn-logout {
-        color: $common-text-color;
-        line-height: 40px;
-        height: 40px;
-        padding: 0 10px;
-        &:hover {
-            background-color: darken($colormain, 5);
+
+    .wrap-item-right {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .wellcome {
+            margin-right: 10px;
+            font-size: 1.2rem;
         }
-        i {
-            font-size: $base-size + 1px;
+
+        .language {
+            margin-right: 20px;
+
+            .language-vn {
+                margin-right: 10px;
+                opacity: 0.8;
+                cursor: pointer;
+
+                &.active {
+                    color: orange;
+                    opacity: 1;
+
+
+                }
+
+            }
+
+            .language-en {
+                cursor: pointer;
+                opacity: 0.8;
+
+                &.active {
+                    color: red;
+                    opacity: 1;
+
+
+                }
+            }
+        }
+
+        .btn-logout {
+            color: $common-text-color;
+            line-height: 40px;
+            height: 40px;
+            padding: 0 10px;
+
+            &:hover {
+                background-color: darken($colormain, 5);
+            }
+
+            i {
+                font-size: $base-size + 1px;
+            }
         }
     }
 }
