--- a/src/containers/System/admin/TableListUser.scss
+++ b/src/containers/System/admin/TableListUser.scss
@@ -1,19 +1,9 @@
 .table-container {
-    .table-content {
+    margin-bottom: 36px;
+
+    .table-list-content {
         margin: 0 16px;
-    }
 
-    .btn-add {
-
-        margin: 8px 15px;
-        padding: 4px 12px;
-        border: none;
-        background-color: #04AA6D;
-        border-radius: 5px;
-    }
-
-
-    .table-content {
         #customers {
             font-family: Arial, Helvetica, sans-serif;
             border-collapse: collapse;
@@ -66,55 +56,5 @@
 
         }
 
-
     }
-}
-
-// modal input
-
-.form-input {
-    display: flex;
-    gap: 10px;
-    flex-wrap: wrap;
-    width: 100%;
-
-    .input-item {
-        display: flex;
-        flex: 0 0 49%;
-        flex-direction: column;
-
-        label {
-            font-size: 1.2rem;
-            color: #333;
-        }
-
-        input {
-            border: 1px solid #d3d3d3;
-            border-radius: 3px;
-            outline: none;
-            height: 36px;
-            padding: 0 16px;
-        }
-
-        &.input-size-s {
-            flex: 0 0 100%;
-        }
-    }
-}
-
-.close {
-    background-color: transparent;
-    border: none;
-    border-radius: 2px;
-    width: 30px;
-
-    span {
-        font-size: 2.4rem;
-        color: #fff;
-        font-weight: 600;
-    }
-}
-
-.btn {
-    padding: 0 16px;
 }
