--- a/src/containers/homePage/homeSection/HomeFeaturedDoctor.scss
+++ b/src/containers/homePage/homeSection/HomeFeaturedDoctor.scss
@@ -20,7 +20,8 @@
                         height: 120px !important;
                         width: 120px !important;
                         border-radius: 60px;
-                        background-image: url('../../../assets/featuredDoctor/bac-si-gia-dinh.png');
+                        background-color: #fff;
+                        //  background-image: url('../../../assets/featuredDoctor/bac-si-gia-dinh.png');
                     }
                 }
             }
