update detail doctor and schedule

--- a/src/containers/System/admin/DoctorManage.scss
+++ b/src/containers/System/admin/DoctorManage.scss
@@ -41,5 +41,14 @@
             background-color: orange;
 
         }
+        .btn-create-infor {
+            width: 150px;
+            height: 32px;
+            border: none;
+            color: white;
+            border-radius: 10px;
+            background-color:rgb(0, 98, 255);
+
+        }
     }
 }
