--- a/src/containers/homePage/homeSection/HomeFeaturedDoctor.scss
+++ b/src/containers/homePage/homeSection/HomeFeaturedDoctor.scss
@@ -4,6 +4,7 @@
 
         .section-item {
             position: relative;
+            cursor: pointer;
 
             .outer-image {
                 background: #f5f5f5;
