--- a/src/containers/auth/Login.scss
+++ b/src/containers/auth/Login.scss
@@ -20,15 +20,19 @@
             border-bottom-left-radius: 8px;
             border-top-left-radius: 8px;
         }
-
+        .label{
+            font-size: 16px;
+            margin: 5px;
+            font-weight: 600;
+            color: #4ab0fe;
+        }
         .login-content {
             padding: 15px;
             width: 50%;
 
-
             .login-text {
-                font-size: 2.6rem;
-                font-weight: 600;
+                padding: 10px;
+                border-radius: 50%;
                 text-align: center;
                 margin: 5% 0;
             }
